--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,7 @@
     transform: scale(1.1);
   }
 .header .nav-links a {
-  font-size: 18px; /* Cambiar 700 por un valor válido */
+  font-size: 18px; 
   color: #000000;
 }
 
@@ -236,231 +236,13 @@
       }
 }
 
-  /* .about {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin: 20px;
-}
+ 
 
-.about-text {
-  padding: 10px;
-  text-align: left;
-  word-wrap: break-word;
-}
-
-.about h2 {
-  margin-bottom: 20px;
-  font-size: 40px;
-}
-
-.about p {
-  margin-bottom: 20px;
-  font-size: 20px;
-}
-
-.about-img img {
-    max-width: 100%;
-    height: auto;
-    text-align: left;
-    margin-left: 20px;
-} */
-
-    /* FOOTER */
-.footer {
-    background-color: #72B9EA;
-    padding: 20px;
-  }
-  .footer p {
-    color: rgb(0, 0, 0);
-    font-family: "Open Sans", sans-serif;
-    text-align: left;
-  }
-
-  .footer-section {
-    flex: 1 1 200px;
-    min-width: 200px;
-  }
-
-  .footer-content {
-    color: rgb(0, 0, 0);
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin: 0 auto;
-    justify-content: space-between;
-    padding: 20px;
-  }
-  .footer-section h2 {
-    font-family: "Open Sans", sans-serif;
-    margin-bottom: 10px;
-  }
-    .footer-section ul {
-        list-style-type: none;
-    }
-/* Value Proposition Section */
-.value-proposition {
-  text-align: center;
-  padding: 50px 20px;
-  background-color: #e0f7fa;
-}
-
-.value-proposition h2 {
-  font-size: 36px;
-  margin-bottom: 20px;
-}
-
-.value-cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-}
-
-.value-card {
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  padding: 20px;
-  width: 300px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-}
-
-.value-card:hover {
-  transform: translateY(-10px);
-}
-
-.value-card h3 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.value-card p {
-  font-size: 16px;
-  margin-bottom: 10px;
-}
-
-/* Comparison Table Section */
-.comparison-table {
-  text-align: center;
-  padding: 50px 20px;
-  background-color: rgba(135, 206, 235, 0.5); /* Celeste transparente */
-}
-
-.comparison-table h2 {
-  font-size: 36px;
-  margin-bottom: 20px;
-}
-
-.comparison-table table {
-  width: 100%;
-  border-collapse: collapse;
-  margin: 0 auto;
-  border: 2px solid #000; /* Contorno negro */
-}
-
-.comparison-table th, .comparison-table td {
-  border: 1px solid #000; /* Separaciones negras */
-  padding: 8px;
-  text-align: center;
-}
-
-.celeste .comparison-table th {
-  background-color: rgba(135, 206, 235, 0.5); /* Celeste transparente */
-  font-size: 18px;
-}
-
-.comparison-table td {
-  font-size: 16px;
-}
-/* Testimonials Section */
-.testimonials {
-  text-align: center;
-  padding: 50px 20px;
-  background-color: #fff3e0;
-}
-
-.testimonials h2 {
-  font-size: 36px;
-  margin-bottom: 20px;
-}
-
-.testimonial-cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-}
-
-.testimonial-card {
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  padding: 20px;
-  width: 300px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-}
-
-.testimonial-card:hover {
-  transform: translateY(-10px);
-}
-
-.testimonial-card p {
-  font-size: 16px;
-  margin-bottom: 10px;
-}
-
-/* Loyalty Programs Section */
-.loyalty-programs {
-  text-align: center;
-  padding: 50px 20px;
-  background-color: #e8eaf6;
-}
-
-.loyalty-programs h2 {
-  font-size: 36px;
-  margin-bottom: 20px;
-}
-
-.loyalty-cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-}
-
-.loyalty-card {
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  padding: 20px;
-  width: 300px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-}
-
-.loyalty-card:hover {
-  transform: translateY(-10px);
-}
-
-.loyalty-card h3 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.loyalty-card p {
-  font-size: 16px;
-  margin-bottom: 10px;
-}
 /* Plans Section */
 .plans {
   text-align: center;
-  padding: 50px 20px;
-  background-color: #ffffff; /* Fondo blanco */
+  padding: 10px 20px;
+  background-color: #ffffff;
 }
 
 .plans h2 {
@@ -555,22 +337,214 @@
 .btn-white:hover {
   background-color: #f0f0f0;
 }
-/* Personal Plan Styles */
-.personal-plan {
-  background-color: rgba(192, 192, 192, 0.5); /* Silver with transparency */
-  color: #003366; /* Azul oscuro */
+
+
+.contact-us-title h2{
+  margin-top: 30px;
+  text-align: center;
+  font-size: 40px;
 }
 
-.personal-plan h3,
-.personal-plan p,
-.personal-plan ul li {
-  color: #003366; /* Azul oscuro */
+.contact {
+  display: flex;
+  flex-direction: row;
+  max-width: 800px;
+  padding: 5px;
+  margin: 30px auto;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0,0,0,0.3);
 }
-.plan-card button {
-  display: block;
-  margin: 0 auto;
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  background-color: #72B9EA;
+  border-radius: 10px;
+  color: rgb(0, 0, 0);
+  padding: 20px;
+  width: 100%;
+  justify-content: space-between;
+  position: relative;
+  overflow: hidden;
 }
-/* Organization Plan Styles */
-.organization-plan {
-  border: 2px solid #FFD700; /* Contorno amarillo oscuro */
+
+.contact-info::before {
+  content: '';
+  position: absolute;
+  border-radius: 50%;
+  background: rgba(0, 0, 0); 
+  width: 150px;
+  height: 150px;
+  bottom: -50px;
+  right: -50px;
+  z-index: 1;
 }
+
+.contact-info::after {
+  content: '';
+  position: absolute;
+  border-radius: 50%;
+  background: rgba(109, 109, 109, 0.5);
+  width: 80px;
+  height: 80px;
+  bottom: 40px;
+  right: 50px;
+  z-index: 2;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
+  padding: 20px;
+  width: 100%;
+}
+
+.contact-info-header p{
+  margin-top: 5px;
+  font-size: 15px;
+  font: helvetica;
+  color:#424242
+}
+
+.contact-info-content {
+  margin-top: 20px;
+}
+
+.contact-info-content p {
+  margin-top: 15px;
+}
+
+.social-icons {
+  margin-top: 20px;
+  align-self: flex-start;
+}
+.social-icons img {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+  object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .contact {
+    flex-direction: column;
+    padding: 10px;
+  }
+}
+.form-row-up {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px;
+}
+
+.form-row-down {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px;
+}
+
+.form-group {
+  position: relative;
+  width: 48%;
+}
+.form-group.full-width {
+  margin: 30px;
+  width: 88%;
+}
+.form-group label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 14px;
+  color: #999;
+  transition: all 0.3s ease;
+  pointer-events: none;
+}
+.form-group input,
+.form-group textarea,
+.form-group select {
+  width: 100%;
+  padding: 5px 0;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  background-color: transparent;
+  outline: none;
+  font-size: 16px;
+}
+.form-group input:focus,
+.form-group textarea:focus,
+.form-group select:focus {
+  border-bottom-color: #87CEEB;
+}
+.form-group input:focus + label,
+.form-group textarea:focus + label,
+.form-group select:focus + label,
+.form-group input:not(:placeholder-shown) + label,
+.form-group textarea:not(:placeholder-shown) + label,
+.form-group select:not(:placeholder-shown) + label {
+  top: -20px;
+  font-size: 12px;
+  color: #87CEEB;
+}
+.form-group textarea {
+  height: 100px;
+  resize: none;
+}
+.form-group select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  padding-right: 20px;
+}
+
+.submit-btn {
+  background-color: #87CEEB;
+  color: white;
+  border: none;
+  align-self: flex-end;
+  margin: 30px;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  width: 40%;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+   /* FOOTER */
+   .footer {
+    background-color: #72B9EA;
+    padding: 20px;
+  }
+  .footer p {
+    color: rgb(0, 0, 0);
+    font-family: "Open Sans", sans-serif;
+    text-align: left;
+  }
+
+  .footer-section {
+    flex: 1 1 200px;
+    min-width: 200px;
+  }
+
+  .footer-content {
+    color: rgb(0, 0, 0);
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 0 auto;
+    justify-content: space-between;
+    padding: 20px;
+  }
+  .footer-section h2 {
+    font-family: "Open Sans", sans-serif;
+    margin-bottom: 10px;
+  }
+    .footer-section ul {
+        list-style-type: none;
+    }
